# k8s-job-operator

./: Cargo.toml  Dockerfile  Makefile  README.md
manifests/: crd.yaml
src/: main.rs  types.rs
