[package]
name = "k8s-job-operator"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
chrono = "0.4.42"
futures = "0.3.31"
http = "1.3.1"
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.0", features = ["latest", "schemars"] }
schemars = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.33"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tower-http = "0.6.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
